--- a/obligatorios/desafio 13/index.html
+++ b/obligatorios/desafio 13/index.html
@@ -43,7 +43,7 @@
                     <hr class="mt-5">
                     
                     <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                        <button  class="btn btn-primary btn-block mb-4" onclick="promediarNotas();">Calcular Promedio</button>
+                        <button  class="btn btn-primary btn-block mb-4" onclick="promediarNotas();" id="show">Calcular Promedio</button>
                     </div>                    
                 </form>
             </div>
