--- a/obligatorios/desafio 9/index.html
+++ b/obligatorios/desafio 9/index.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 8 Javascript</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Desafio 9 Javascript</title>
 </head>
-
-
 <body>
 
-    <form action="">
+    <form id="formulario" class="formulario">
 
-        <input type="text" placeholder="Nombre" autocomplete="off" id="nombre"><br>
-        <input type="text" placeholder="Apellido" autocomplete="off" id="apellido"><br>
-        <input type="number" placeholder="Edad" autocomplete="off" id="edad"><br>
+        <label >Nombre Alumno</label><br>
+        <input type="text" id="nombre" placeholder="Ingrese el nombre"><br>
+        <label >Apellido Alumno</label><br>
+        <input id="apellido" name="apellido" placeholder="Ingrese el apellido"><br><br>
+        <label >Edad Alumno</label><br>
+        <input id="edad" name="edad" placeholder="Ingrese la edad"><br><br>
 
-        <button id="btnSave">Registrar</button>
-
+        <input type="submit" value="Enviar">
     </form>
-    
 
-
-
-
-
-    <script src="./app.js"></script>
+    <table class="table table-dark table-striped" id = "tablaContent">
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Edad</th>
+        </tr>
+    </table>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 </html>
