--- a/obligatorios/Entrega Final/index.html
+++ b/obligatorios/Entrega Final/index.html
@@ -71,9 +71,9 @@
                 </tbody>                  
             </table>
        </div>
-       <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+      <!--  <div class="d-grid gap-2 d-md-flex justify-content-md-center">
         <button  class="btn btn-primary btn-block mb-4" onclick="promediarNotas();" id="show">Nuestros alumnos</button>
-    </div>
+    </div> -->
     </div>
     <script src="./jquery.js"></script>
     <script src="./app.js"></script>
